yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
      tier: demo
  template:
    metadata:
      labels:
        app: hello-world
        tier: demo
    spec:
      containers:
      - name: hello-world
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
