yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: LoadBalancer | NodePort | ClusterIP  
  ports:
  - port: 8080
    targetPort: 80
